# MediaDemo

./: .gitignore
app/src/main/cpp/: CMakeLists.txt  config_site.h  native-lib.cpp  pjsua_aud.c  pjsua_media.c  pjsua_vid.c
app/src/main/cpp/pjlib-util/include/: pjlib-util.h
app/src/main/cpp/pjlib-util/include/pjlib-util/: sound_record.h
app/src/main/cpp/pjlib/include/pj/: activesock.h  addr_resolv.h  array.h  assert.h  config.h  config_site.h  config_site_sample.h  ctype.h  errno.h  except.h  fifobuf.h  file_access.h  file_io.h  guid.h  hash.h  ioqueue.h  ip_helper.h  limits.h  list.h  list_i.h  lock.h  log.h  math.h  os.h  pool.h  pool_buf.h  sock.h  sock_qos.h  sock_select.h  ssl_sock.h
app/src/main/cpp/pjlib/src/pj/: activesock.c  config.c  fifobuf.c  ioqueue_common_abs.c  ioqueue_common_abs.h  ioqueue_dummy.c  ioqueue_epoll.c  ioqueue_select.c  os_core_unix.c  pool_buf.c  sock_bsd.c  sock_qos_bsd.c  sock_qos_common.c  sock_select.c
app/src/main/cpp/pjlib/src/pjlib-test/: sock.c
app/src/main/cpp/pjmedia/include/: pjmedia-codec.h  pjmedia.h
app/src/main/cpp/pjmedia/include/pjmedia/: audiodev.h  circbuf.h  codec.h  conference.h  config.h  delaybuf.h  echo.h  jbuf.h  rtp.h  vid_port.h
app/src/main/cpp/pjmedia/include/pjmedia-audiodev/: config.h
app/src/main/cpp/pjmedia/include/pjmedia-codec/: config.h
app/src/main/cpp/pjmedia/include/pjmedia-videodev/: opengl_dev.h  vid_save.h  videodev.h
app/src/main/cpp/pjmedia/src/pjmedia-audiodev/: aac_enc.c  aac_enc.h  android_jni_dev.c
app/src/main/cpp/pjmedia/src/pjmedia-codec/: ffmpeg_vid_codecs.c  ilbc.c  (+6 more)
(+44 files in other folders)
